--- a/client/src/components/nav/nav.css
+++ b/client/src/components/nav/nav.css
@@ -18,11 +18,12 @@ h1 {
   font-size: 20px;
   font-style: italic;
   color: var(--text-white);
-
   mix-blend-mode: difference;
 }
 nav {
-  height: 50px;
+  height: 30px;
+
+  display: flex;
 }
 
 a {
