--- a/client/src/views/home/home.css
+++ b/client/src/views/home/home.css
@@ -12,3 +12,9 @@
   background-repeat: no-repeat;
   text-align: center;
 }
+
+@media screen and (max-width: 650px) {
+  .homeWrapper {
+    background-size: 90%;
+  }
+}
